--- a/_admin/assets/css/site.css
+++ b/_admin/assets/css/site.css
@@ -25,3 +25,18 @@ a:hover
 	font-size: 1.8em;
 }
 
+/*
+
+.page-login
+{
+	background-color: black;
+}
+
+#login-box
+{
+	background-color: #ccf;
+	margin: auto;
+	width: 285px;
+	border: 1px solid #888;
+	padding: 10px;
+}*/
